--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fast-events",
   "version": "0.1.0",
-  "description": "fast-events",
+  "description": "A very simple and faster EventEmitter",
   "main": "index.js",
   "scripts": {
     "test": "make test"
@@ -11,7 +11,10 @@
     "url": "git://github.com/kaelzhang/node-fast-events.git"
   },
   "keywords": [
-    "fast-events"
+    "fast-events",
+    "events",
+    "eventemitter",
+    "fast"
   ],
   "engines": { 
     "node": ">=0.11.0"
